🔍 SEO: Turkish keyword targeting, hreflang, FAQ schemas, sitemap update & footer enhancement
- Added hreflang (EN/TR/x-default) and geo targeting to SEO.tsx
- Updated index.html with Turkish LSI keywords and fixed OG/Twitter URLs
- Enhanced all 7 page components with Turkish keywords (bedava müzik dağıtımı, kayıt etiketi, etc.)
- Added generateFAQSchema to seoUtils.ts
- Added FAQ rich snippets to Services (6 FAQs) and Submit (4 FAQs) pages
- Added 3 new blog posts to sitemap.xml
- Added keyword-rich Resources column to Footer.tsx
- Added 3 new blog posts (post-65, 66, 67) with Unsplash images

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <title>WBBT Records | UK-Based Independent Record Label</title>
+  <title>WBBT Records | Free Music Distribution & Independent Record Label</title>
   <meta name="description"
-    content="WBBT Records is a premier UK-based independent record label empowering artists with distribution, marketing, and creative services. Home of WBBT, Oyku, and future-forward music." />
+    content="WBBT Records is a UK-based independent record label offering free music distribution to all major platforms. Empowering artists with marketing, PR, and creative services. Bedava müzik dağıtımı ve bağımsız sanatçı geliştirme." />
   <meta name="keywords"
-    content="WBBT Records, Record Label UK, Independent Label, Music Distribution, Artist Development, Burak Can Öğüt, EDM, Dark Pop, London Record Label" />
+    content="WBBT Records, Free Music Distribution, Record Label, Independent Label, Music Distribution, Artist Development, Bedava Müzik Dağıtımı, Kayıt Etiketi, Bağımsız Sanatçı, Müzik Dağıtım Platformu, EDM, Dark Pop, London Record Label, Burak Can Öğüt" />
   <meta name="author" content="WBBT Group" />
+  <meta http-equiv="content-language" content="en, tr" />
+  <link rel="alternate" hreflang="en" href="https://www.wbbt.net/" />
+  <link rel="alternate" hreflang="tr" href="https://www.wbbt.net/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.wbbt.net/" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNRPHEN8ST"></script>
@@ -24,18 +28,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://wbbt.net/" />
-  <meta property="og:title" content="WBBT Records | Defining the Future of Sound" />
+  <meta property="og:url" content="https://www.wbbt.net/" />
+  <meta property="og:title" content="WBBT Records | Free Music Distribution & Independent Record Label" />
   <meta property="og:description"
-    content="Join the movement. WBBT Records offers a variety of services to help artists create, share and monetize their own music." />
+    content="Free music distribution to Spotify, Apple Music, and 150+ platforms. WBBT Records empowers independent artists with marketing, PR, and creative services." />
   <meta property="og:image"
     content="https://static.wixstatic.com/media/27c1cc_ddcac3da9bea4394b990d38b83009142~mv2.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://wbbt.net/" />
-  <meta property="twitter:title" content="WBBT Records | UK Independent Label" />
-  <meta property="twitter:description" content="Empowering independent artists. Distribution, Marketing, Strategy." />
+  <meta property="twitter:url" content="https://www.wbbt.net/" />
+  <meta property="twitter:title" content="WBBT Records | Free Music Distribution & Record Label" />
+  <meta property="twitter:description"
+    content="Free music distribution to 150+ platforms. Empowering independent artists worldwide." />
   <meta property="twitter:image"
     content="https://static.wixstatic.com/media/27c1cc_ddcac3da9bea4394b990d38b83009142~mv2.jpg" />
 
