🔍 SEO: Global + Turkish keyword optimization, FAQ schemas, sitemap & footer
- Added hreflang (EN/TR/x-default) and geo targeting to SEO.tsx
- Enhanced all pages with competitive English keywords (Distribute Music Free, Upload Music to Spotify, Best Music Distributor, How to Get Signed, etc.)
- Added Turkish LSI keywords (bedava muzik dagitimi, kayit etiketi, etc.)
- Updated index.html with global OG/Twitter meta tags
- Added generateFAQSchema to seoUtils.ts
- Added FAQ rich snippets to Services (6 FAQs) and Submit (4 FAQs) pages
- Added 3 new blog posts (post-65, 66, 67) to sitemap.xml
- Added keyword-rich Resources column to Footer.tsx
- Created 3 new blog posts with Unsplash images

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <title>WBBT Records | Free Music Distribution & Independent Record Label</title>
   <meta name="description"
-    content="WBBT Records is a UK-based independent record label offering free music distribution to all major platforms. Empowering artists with marketing, PR, and creative services. Bedava müzik dağıtımı ve bağımsız sanatçı geliştirme." />
+    content="WBBT Records — Free music distribution to Spotify, Apple Music, Amazon & 150+ platforms. UK-based independent record label empowering artists with marketing, PR, royalty collection & creative services worldwide. Bedava müzik dağıtımı ve bağımsız sanatçı geliştirme." />
   <meta name="keywords"
-    content="WBBT Records, Free Music Distribution, Record Label, Independent Label, Music Distribution, Artist Development, Bedava Müzik Dağıtımı, Kayıt Etiketi, Bağımsız Sanatçı, Müzik Dağıtım Platformu, EDM, Dark Pop, London Record Label, Burak Can Öğüt" />
+    content="WBBT Records, Free Music Distribution, Distribute Music Free, Upload Music to Spotify, Independent Record Label, Music Distribution Service, Best Music Distributor, Record Label for Artists, Music Marketing, Artist Development, Royalty Collection, Bedava Müzik Dağıtımı, Kayıt Etiketi, Bağımsız Sanatçı, Müzik Dağıtım Platformu, EDM, Dark Pop, London Record Label, Burak Can Öğüt" />
   <meta name="author" content="WBBT Group" />
   <meta http-equiv="content-language" content="en, tr" />
   <link rel="alternate" hreflang="en" href="https://www.wbbt.net/" />
