feat: enhance SEO, add AI marketing strategy guides, update services terminology to 'Unlimited Free Releases'

--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <title>WBBT Records | Free Music Distribution & Independent Record Label</title>
-  <meta name="description"
-    content="WBBT Records — Free music distribution to Spotify, Apple Music, Amazon & 150+ platforms. UK-based independent record label empowering artists with marketing, PR, royalty collection & creative services worldwide. Bedava müzik dağıtımı ve bağımsız sanatçı geliştirme." />
-  <meta name="keywords"
-    content="WBBT Records, Free Music Distribution, Distribute Music Free, Upload Music to Spotify, Independent Record Label, Music Distribution Service, Best Music Distributor, Record Label for Artists, Music Marketing, Artist Development, Royalty Collection, Bedava Müzik Dağıtımı, Kayıt Etiketi, Bağımsız Sanatçı, Müzik Dağıtım Platformu, EDM, Dark Pop, London Record Label, Burak Can Öğüt" />
-  <meta name="author" content="WBBT Group" />
-  <meta http-equiv="content-language" content="en, tr" />
-  <link rel="alternate" hreflang="en" href="https://www.wbbt.net/" />
-  <link rel="alternate" hreflang="tr" href="https://www.wbbt.net/" />
-  <link rel="alternate" hreflang="x-default" href="https://www.wbbt.net/" />
+  <!-- Meta tags managed by React Helmet Async -->
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNRPHEN8ST"></script>
@@ -27,22 +19,8 @@
   </script>
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.wbbt.net/" />
-  <meta property="og:title" content="WBBT Records | Free Music Distribution & Independent Record Label" />
-  <meta property="og:description"
-    content="Free music distribution to Spotify, Apple Music, and 150+ platforms. WBBT Records empowers independent artists with marketing, PR, and creative services." />
-  <meta property="og:image"
-    content="https://static.wixstatic.com/media/27c1cc_ddcac3da9bea4394b990d38b83009142~mv2.jpg" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://www.wbbt.net/" />
-  <meta property="twitter:title" content="WBBT Records | Free Music Distribution & Record Label" />
-  <meta property="twitter:description"
-    content="Free music distribution to 150+ platforms. Empowering independent artists worldwide." />
-  <meta property="twitter:image"
-    content="https://static.wixstatic.com/media/27c1cc_ddcac3da9bea4394b990d38b83009142~mv2.jpg" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
